# indexxxer_v3

./: .env.example  .gitignore  GEMINI.md  findings.md  progress.md  task_plan.md
backend/: Dockerfile  Dockerfile.ml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_m2_search.py  0003_m3_ai.py  0004_m4_auth.py  0005_m4_connectors.py  0006_m4_webhooks.py  0007_m4_analytics.py  0008_galleries.py  0009_pdfs.py  0010_performers.py  0011_dedup.py  0012_dedup_v2.py  0013_torrent_downloads.py
backend/app/: config.py  database.py  main.py
backend/app/connectors/: base.py  factory.py  ftp.py  local.py  smb.py
backend/app/core/: deps.py  encryption.py  exceptions.py  pagination.py  redis_pool.py  security.py
backend/app/extractors/: base.py  image.py  video.py
backend/app/graphql/: resolvers.py  schema.py  types.py
backend/app/ml/: __init__.py  blip2_model.py  clip_model.py  insightface_model.py  ollama_client.py  registry.py  whisper_model.py
backend/app/models/: __init__.py  base.py  frame_hash.py  gallery.py  index_job.py  media_face.py  media_item.py  media_source.py  pdf_document.py  performer.py  query_log.py  saved_filter.py  source_credential.py  tag.py  torrent_download.py  user.py  webhook.py
backend/app/routers/: analytics.py  auth.py  downloader.py  duplicates.py  export.py  faces.py  filters.py  galleries.py  jobs.py  media.py  pdfs.py  performers.py  search.py  sources.py  status.py  stream.py  tags.py  torrents.py  users.py  webhooks.py  workers.py
backend/app/schemas/: credential.py  face.py  gallery.py  index_job.py  media_item.py  media_source.py  pdf_document.py  performer.py  saved_filter.py  tag.py  torrent.py  user.py  webhook.py
backend/app/services/: analytics_service.py  dedup_service.py  downloader.py  face_service.py  filter_service.py  gallery_service.py  media_service.py  nsfw_tagger.py  pdf_service.py  performer_scraper.py  performer_service.py  prowlarr_service.py  search_service.py  source_service.py  storage_service.py  torrent_download_service.py  transmission_service.py  user_service.py  webhook_service.py
backend/app/workers/: celery_app.py  db.py  events.py
backend/app/workers/tasks/: ai.py  analytics.py  clip.py  downloader.py  gallery.py  hashing.py  heartbeat.py  nsfw_tag.py  pdf.py  performer.py  phash.py  scan.py  thumbnail.py  torrents.py  watcher.py  webhook.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_connectors.py  test_export.py  test_extractors.py  test_filters.py  test_graphql.py  test_health.py  test_jobs.py  test_media.py  test_search.py  test_search_m2.py  test_sources.py  test_tags.py  test_webhooks.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/downloader/: page.tsx
frontend/src/app/duplicates/: page.tsx
frontend/src/app/faces/: page.tsx
frontend/src/app/galleries/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/hooks/: useCurrentUser.ts  useInfiniteScroll.ts
frontend/src/lib/: utils.ts
frontend/src/types/: api.ts
infra/: docker-compose.yml
infra/vpn/: config.ovpn
scripts/: dev.sh  seed.py
(+48 files in other folders)
